force-app/main/default/objects/Connected_Org__c/Connected_Org__c.object-meta.xml
<CustomObject>
    <label>Connected Org</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connected Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>