force-app/main/default/objects/Connected_Org__c/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <externalId>true</externalId>
    <label>Access Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>