force-app/main/default/objects/Connected_Org__c/fields/Avg_Sync_Latency_ms__c.field-meta.xml
<CustomField>
    <fullName>Avg_Sync_Latency_ms__c</fullName>
    <label>Avg Sync Latency (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>