force-app/main/default/objects/Connected_Org__c/fields/Circuit_Open_Until__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Open_Until__c</fullName>
    <label>Circuit Open Until</label>
    <type>DateTime</type>
</CustomField>