force-app/main/default/objects/Connected_Org__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Error Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>