force-app/main/default/objects/Connected_Org__c/fields/Health_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Health_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Snapshot</label>
    <referenceTo>Health_Snapshot__c</referenceTo>
    <relationshipLabel>Connected Orgs</relationshipLabel>
    <relationshipName>Connected_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>